Go cellphone architecture redesign
